# quarzum

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  code  code.qz  example.qbyte  main  main.c  main.cpp  math.qz  out.asm  output  output.asm  run.sh  test.sh
docs/: ir.md
docs/project/: style.md
examples/: calculate.qz  hello_world.qz  list.qz
include/: quarzum.h  token.h
include/core/: bsearch.h  buffer.h  char.h  debug.h  defines.h  path.h  process.h  string.h  types.h  utils.h
include/quarzum/: ast.h  buffer.h  cli.h  config.h  debug.h  defs.h  expr.h  io.h  ir.h  lexer.h  options.h  source.h  symbol.h  token.h  tokenlist.h  type.h  version.h
include/toolchain/: checker.h  compile.h  parser.h  tokenizer.h
install/: install.sh  quarzum
lib/: collections.qz  color.qz  math.qz  std.qz
lib/std/: bits.qz  collections.qz  console.qz  decimal.qz  file.qz  list.qz  math.qz  memory.qz  std.qz  string.qz  time.qz  types.qz  unicode.qz
old/src/: main.c  quarzum.h
old/src/core/: error.c  (+3 more)
output/: main
scripts/: build+run.sh  compileBuiltins.sh  run.sh
src/: Quarzum.h  README.md  bsearch.c  check.c  codegen.c  debug.hpp  error.hpp  expr.c  hashmap.c  io.c  ir.c  main.c  map.c  parse.c  process.c  quarzum.h  source.hpp  string.c  symbol.c  tokenize.c  tokenizer.cpp  type.c  vector.c
src/ast/: astnode.hpp  containers.hpp  declarations.hpp  expressions.hpp  literals.hpp  nodes.hpp  statements.hpp
src/backend/: assemble.c  assemble.h  assembler.c  assembler.h  assembler.hpp  x86_64.c  x86_64.h  x86_64_builtins.asm
src/cli/: cli.cpp  cli.hpp
src/core/: array.c  array.h  bsearch.c  buffer.c  char.c  core.h  debug.c  error.c  error.h  file.c  file.h  hashmap.c  hashmap.h  path.c  position.c  position.h  process.c  process.h  string.c  string.h  vector.c  vector.h
src/debug/: debug.cpp
src/frontend/: check.c  check.h  codegen.h  compile.c  compile.h  expr.c  expr.h  lexer.c  lexer.h  parse.c  parse.h  symbol.c  symbol.h  token.c  token.h  tokenize.c  tokenize.h  type.c  type.h
src/internal/: ast.c  buffer.c  cli.c  config.c  debug.c  defs.c  expr.c  io.c  ir.c  symbol.c  token.c  tokenlist.c  type.c  version.c
src/ir/: ir.c  ir.h  irinstruction.hpp
src/lexer/: lexer.cpp  token.cpp
src/parser/: expr.cpp  expression.hpp  identation.hpp  node.cpp  node.h  node.hpp  parser.cpp  parser.h  parser.hpp  statement.hpp
src/qbyte/: README.md  qbyte.c  qbyte.h
src/sem_ir/: check.cpp  check.h  irinstruction.hpp  symboltable.cpp  symboltable.hpp  types.cpp  types.h  types.hpp
src/semantics/: semantics.hpp  types.cpp  types.hpp
(+79 files in other folders)
